--- a/noticias.html
+++ b/noticias.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Copão</title>
-    <link rel="shortcut icon" href="Img/bolaverde.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/53/53264.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark">
